--- a/backend/package.json
+++ b/backend/package.json
@@ -22,9 +22,11 @@
   "dependencies": {
     "@prisma/client": "^4.6.1",
     "cookie-parser": "^1.4.6",
+    "deep-email-validator": "^0.1.21",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.8.0"
   }
 }
