--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.0",
+    "firebase": "^9.14.0",
     "js-cookie": "^3.0.1",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
