--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev ./src/server.ts",
+    "dev": "ts-node-dev ./src/server.js",
     "build": "tsc"
   },
   "keywords": [],
@@ -21,6 +22,7 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@google-cloud/storage": "^6.8.0",
     "@prisma/client": "^4.6.1",
     "cookie-parser": "^1.4.6",
     "deep-email-validator": "^0.1.21",
