--- a/temp-backend/package.json
+++ b/temp-backend/package.json
@@ -19,6 +19,7 @@
     "firebase": "^9.14.0",
     "jsonwebtoken": "^8.5.1",
     "node-oracledb": "^1.0.2",
+    "node-rsa": "^1.1.1",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "oracledb": "^5.5.0",
