--- a/backend/package.json
+++ b/backend/package.json
@@ -1,35 +1,28 @@
 {
-  "name": "backend",
+  "name": "temp-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev ./src/server.js",
-    "build": "tsc"
+    "dev": "nodemon ./src/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/express": "^4.17.14",
-    "@types/jsonwebtoken": "^8.5.9",
-    "@types/node": "^18.11.9",
-    "prisma": "^4.6.1",
-    "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.3"
-  },
+  "author": "cdreyer",
+  "license": "MIT",
   "dependencies": {
-    "@google-cloud/storage": "^6.8.0",
-    "@prisma/client": "^4.6.1",
+    "@prisma/client": "^4.7.1",
+    "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
-    "deep-email-validator": "^0.1.21",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
+    "firebase": "^9.14.0",
     "jsonwebtoken": "^8.5.1",
-    "nodemailer": "^6.8.0"
+    "node-oracledb": "^1.0.2",
+    "node-rsa": "^1.1.1",
+    "nodemailer": "^6.8.0",
+    "nodemon": "^2.0.20",
+    "oracledb": "^5.5.0",
+    "prisma": "^4.7.1"
   }
 }
