--- a/backend/package.json
+++ b/backend/package.json
@@ -16,13 +16,11 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "firebase": "^9.14.0",
     "jsonwebtoken": "^8.5.1",
     "node-oracledb": "^1.0.2",
     "node-rsa": "^1.1.1",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
-    "oracledb": "^5.5.0",
-    "prisma": "^4.7.1"
+    "oracledb": "^5.5.0"
   }
 }
