--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "node-oracledb": "^1.0.2",
     "node-rsa": "^1.1.1",
